examples/good/while_if.mtch
int main() {
    int i = 0;
    int ctr = 0;

    while (i < 15) {
        if (i % 2 == 0) {
            i++;
        }
        else {
            if (i == 7) {
                i--;
                ctr++;
            }
            if (ctr == 10) {
                i = 7;
            }
            //print(i);
            i++;
        }
        print(i);
    }

    return 0;
}