examples/bad/if_error.mtch
int main() {
    int i = 0;

    while (i < 15) {
        if (i % 2 + 5) {
            i++;
        }
        else {
            i++;
        }
        print(i);
    }

    return 0;
}